<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/verify"/>

    <TextView
        android:id="@+id/tvWaiting"
        app:layout_constraintTop_toBottomOf="@id/tvVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/waiting_tv"
        android:gravity="center"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:paddingVertical="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTimer"
        android:text="@string/seconds_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvWaiting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/otp_hint"
        android:inputType="number"
        android:letterSpacing="1.8"
        android:maxLength="6"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimer"
        android:autofillHints="" />
    <TextView
        android:id="@+id/tvOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOTP"
        android:text="@string/enter_6_digit_otp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_chat_gradient"
        android:paddingVertical="12dp"
        android:text="@string/send_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    <Button
        android:id="@+id/btnResendOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_sms"
        android:layout_marginTop="10dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/btnSendOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        android:paddingVertical="12dp"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnResendOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>